# book-cartographer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
config/: config.default.toml  config.sample.toml
docs/: CENTRALITY_FIX.md  IMPROVEMENTS.md  INTERACTION_COUNTS_FIX.md  Makefile  Original Design.md  PENDING_ISSUES.md  README.md  SERIES_SUPPORT.md  epub_character_graph_pipeline.mmd  index.md  series_pipeline.mmd
epub_character_graph/: __init__.py  __main__.py  character_graph.py  cli.py  config.py  epub_parser.py  series_graph.py
epub_character_graph/nlp/: entity_extractor.py  llm_processor.py  prompts.py
epub_character_graph/output_generators/: base.py  image_prompt.py  kodict.py
examples/: README.md
scripts/: recalculate_centrality.py  update_interaction_counts.py
src/: __init__.py
src/book_cartographer/: __init__.py  __main__.py  character_graph.py  cli.py  config.py  series_graph.py  utils.py
src/book_cartographer/nlp/: entity_extractor.py  llm_processor.py
src/book_cartographer/output_generators/: base.py  image_prompt.py  kodict.py
tests/: __init__.py
